--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <title>FENIX菲尼莎后台</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.9.2/ckeditor.js"></script>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>嗨钻后台</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.9.2/ckeditor.js"></script>
+  </head>
 
-<body style="margin:0;padding:0;">
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
-</body>
+  <body style="margin:0;padding:0;">
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 
 </html>
